<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/logo_app"
            android:contentDescription="@string/app_name"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="27dp" />

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center"
            android:text="@string/app_logo"
            android:textColor="#000"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/app_desc"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/inter_extrabold"
            android:onClick="btnClick"
            android:text="@string/btn_main"
            android:textColor="#4A2909"
            android:textSize="20sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>